[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "holocron"
version = "0.4.0"
description = "An extendable static site generator powered by the Force. =/"
authors = ["Ihor Kalnytskyi <ihor@kalnytskyi.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/ikalnytskyi/holocron"
repository = "https://github.com/ikalnytskyi/holocron"
documentation = "https://github.com/ikalnytskyi/holocron"
keywords = ["static", "site", "blog", "generator", "markdown"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Terminals",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^3.0"
PyYAML = "^6.0"
Pygments = "^2.11"
python-dateutil = "^2.8"
jsonpointer = "^2.2"
Markdown = "^3.3"
docutils = "^0.18"
feedgen = "^0.9"
termcolor = "^1.1"
colorama = "^0.4"
mistletoe = "^0.8"
jsonschema = { version = "^4.4", extras = ["format"] }
toml = {version = "^0.10.0"}
more-itertools = "^8.12"

[tool.poetry.dev-dependencies]
mock = "^4.0"
coverage = "^6.2"
pytest = "^6.2.5"
pytest-randomly = "^3.11"
xmltodict = "^0.12"
beautifulsoup4 = "^4.10"
untangle = "^1.1"

[tool.poetry.scripts]
holocron = "holocron.__main__:main"
