[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "holocron"
description = "An extendable static site generator powered by the Force. =/"
readme = "README.rst"
requires-python = ">= 3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Ihor Kalnytskyi", email = "ihor@kalnytskyi.com" }
]
keywords = ["static", "site", "blog", "generator", "markdown"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Terminals",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "Jinja2 >= 3.0",
    "PyYAML >= 6.0",
    "Pygments >= 2.12",
    "python-dateutil >= 2.8",
    "jsonpointer >= 2.2",
    "Markdown >= 3.3",
    "docutils >= 0.18",
    "feedgen >= 0.9",
    "termcolor >= 1.1",
    "colorama >= 0.4",
    "markdown-it-py >= 2.0",
    "mdit-py-plugins >= 0.3",
    "jsonschema[format] >= 4.4",
    "toml >= 0.10",
    "more-itertools >= 8.12",
]
dynamic = ["version"]

[project.urls]
Issues = "https://github.com/ikalnytskyi/holocron/issues"
Source = "https://github.com/ikalnytskyi/holocron"

[project.scripts]
holocron = "holocron.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.envs.test]
python = "3.10"
dependencies = [
    "mock >= 4.0",
    "coverage >= 6.2",
    "pytest >= 6.2.5",
    "pytest-randomly >= 3.11",
    "xmltodict >= 0.12",
    "beautifulsoup4 >= 4.10",
    "untangle >= 1.1",
]
scripts.run = "python -m pytest {args:-vv}"

[tool.hatch.envs.lint]
detached = true
dependencies = ["pre-commit"]
scripts.run = "python -m pre_commit run --all-files --show-diff-on-failure"
