[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "holocron"
description = "An extendable static site generator powered by the Force. =/"
readme = "README.rst"
requires-python = ">= 3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Ihor Kalnytskyi", email = "ihor@kalnytskyi.com" }
]
keywords = ["static", "site", "blog", "generator", "markdown"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Terminals",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Jinja2 >= 3.1",
    "PyYAML >= 6.0",
    "Pygments >= 2.12",
    "python-dateutil >= 2.8",
    "jsonpointer >= 2.3",
    "Markdown >= 3.4",
    "docutils >= 0.19",
    "feedgen >= 0.9",
    "termcolor >= 1.1",
    "colorama >= 0.4",
    "markdown-it-py >= 2.1",
    "mdit-py-plugins >= 0.3",
    "jsonschema[format] >= 4.9",
    "toml >= 0.10",
    "more-itertools >= 8.14",
]
dynamic = ["version"]

[project.urls]
Issues = "https://github.com/ikalnytskyi/holocron/issues"
Source = "https://github.com/ikalnytskyi/holocron"

[project.scripts]
holocron = "holocron.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.envs.test]
dependencies = [
    "mock >= 4.0",
    "coverage >= 6.4",
    "pytest >= 7.1",
    "pytest-randomly >= 3.12",
    "xmltodict >= 0.13",
    "beautifulsoup4 >= 4.11",
    "untangle >= 1.2",
]
scripts.run = "python -m pytest {args:-vv}"

[tool.hatch.envs.lint]
detached = true
dependencies = ["black >= 23.10.1", "ruff >= 0.1.3"]
scripts.check = ["ruff {args:.}", "black --check --diff {args:.}"]
scripts.fmt = ["ruff --fix {args:.}", "black {args:.}"]

[tool.ruff]
select = ["F", "E", "W", "I", "S", "FBT", "B", "C4", "DTZ", "T10", "ISC", "RET", "SLF", "RUF"]
ignore = ["S603", "S701", "B904"]

[tool.ruff.isort]
known-first-party = ["holocron"]

[tool.ruff.per-file-ignores]
"tests/*" = ["E501", "S101", "S607", "SLF001", "RUF001"]
